--- a/assets cv/cv.css
+++ b/assets cv/cv.css
@@ -1,16 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Raleway:ital@1&family=Roboto:wght@400;700&display=swap');
 
 
+@font-face {
+    font-family: "Raleway";
+    src: url(./fonts/Raleway-VariableFont_wght.woff);
+    src: url(./fonts/Raleway-Italic-VariableFont_wght.ttf) format(truetype),
+     url(./fonts/Raleway-VariableFont_wght.otf format(opentype);
+
+}
+
+
+#body_item{
+    width: 1060px;
+    background-color: #782221;  
+}
+
 
 body{
-    background-color: #782221;
-
+    font-family: "Raleway", serif;
 }
+
+
+.mon_img{
+    width: 25%;
+    margin-left: 37%;
+    margin-top: 5%;
+    border-radius: 50%;
+    object-fit: cover;
+    box-shadow: 0 0 30px whitesmoke;
+    
+}
+
+
+
 h1{
     text-align: center;
+    font-family: "Oswald", sans-serif;
+    color: white;
 }
+
 h2{
     text-align: center;
+    font-family: "Oswald", sans-serif;
+    color: white;
 }
 
 .flexbox ul{
@@ -18,8 +50,7 @@ h2{
     justify-content: space-between;
     background-color: #2c1d27;
     margin-top: 20px;
-    padding: 10px;
-    
+    padding: 30px;
     
 }
 
@@ -28,13 +59,65 @@ h2{
     color: white
     
 }
+
+
 main{
     display: flex;
+    text-align: justify;
+    padding-left: 20px;
 }
+
+h3{
+    background-color: antiquewhite;
+    padding-left: 20px;
+    color: black;
+    font-family: "Oswald", sans-serif;
+}
+
 #flexbox div{
     flex-direction: column;
-    =
+    
 }
+
+#bloc_1{
+    color: white;
+}
+
+#phrase{
+    text-indent: 50px;
+}
+
+
 #bloc_2{
 background-color: white;
+width: 2000px;
+padding-left: 20px;
+margin-left: 100px;
 }
+
+
+.class1{
+    border-left: 5px solid brown;
+    margin-right: 20px;
+}
+
+
+.class2{
+    border-left: 5px solid brown ;
+    margin-right: 20px;
+}
+
+.class3{
+    border-left: 5px solid brown;
+    margin-right: 20px;
+    
+}
+
+footer{
+    text-align: center;
+    padding: 10px;
+    justify-content: space-between;
+    
+    
+}
+
